# sos-aarch64

./: .gitignore  init-build.sh  odroid  reset.sh  settings.cmake
kernel/include/arch/arm/arch/object/: interrupt.h
kernel/include/machine/: io.h
kernel/src/arch/arm/kernel/: boot.c
kernel/src/drivers/serial/: config.cmake  meson-gx-uart.c  null-uart.c
kernel/src/plat/qemu-arm-virt/: overlay-qemu-arm-virt.dts
kernel/tools/: hardware.yml
libnfs/lib/: libnfs.c  socket.c
projects/aos/: .gitignore  CMakeLists.txt  init-build.sh  odroid  settings.cmake
projects/aos/apps/cuckoo/: CMakeLists.txt  cuckoo.c
projects/aos/apps/hello/: CMakeLists.txt  hello.c
projects/aos/apps/m3/: CMakeLists.txt
projects/aos/apps/m3/src/: m3.c
projects/aos/apps/m4/: CMakeLists.txt
projects/aos/apps/m4/src/: m4.c
projects/aos/apps/md5/: CMakeLists.txt
projects/aos/apps/md5/src/: main.c
projects/aos/apps/sosh/: CMakeLists.txt
projects/aos/apps/sosh/src/: benchmark.c  md5.c  md5.h  sosh.c
projects/aos/apps/tty_test/: CMakeLists.txt
projects/aos/apps/tty_test/src/: tty_test.c  ttyout.c
projects/aos/libclock/include/clock/: clock.h
projects/aos/libclock/src/: clock.c  soslinkage.h
projects/aos/libsosapi/: CMakeLists.txt
projects/aos/libsosapi/include/: sos.h  sossysnr.h  syscalls.h  util.h
projects/aos/libsosapi/src/: sos.c  sys_exit.c  sys_morecore.c  sys_moremem.c  sys_stdio.c  util.c  vsyscall.c
projects/aos/sos/: CMakeLists.txt
projects/aos/sos/src/: backtrace.h  bgworker.c  bgworker.h  bootstrap.c  bootstrap.h  delegate.c  delegate.h  elf.c  elfload.h  fileman.c  fileman.h  frame_table.c  frame_table.h  grp01.h  libclocktest.c  libclocktest.h  main.c  maininterface.h  mallocts.c  mallocts.h  network.c  network.h  procman.c  procman.h  procsyscall.c  procsyscall.h  proctable.c  proctable.h  threadassert.h  threads.c  threads.h  timesyscall.c  timesyscall.h  ut.h  utils.c  utils.h  vmem_layout.h
projects/aos/sos/src/fakes/: timer.c  timer.h
projects/aos/sos/src/fs/: console.c  console.h  cpiofs.c  cpiofs.h  fake.c  fake.h  fakeconsole.c  nfs.c  nfs.h  nullfile.c  nullfile.h  pl011console.c
projects/aos/sos/src/vm/: addrspace.c  addrspace.h  faulthandler.c  faulthandler.h  mapping2.c  mapping2.h  syshandlers.c  syshandlers.h
projects/libgrp01util/: CMakeLists.txt
projects/libgrp01util/include/grp01/: binsearch.h  bitfield.h  dynaarray.h  hash.h  misc.h
projects/libgrp01util/src/: binsearch.c  bitfield.c  dynarray.c  hash.c
projects/libnfs/: CMakeLists.txt
projects/libsel4sync/: CMakeLists.txt
projects/libsel4sync/include/sync/: atomic.h  bin_sem.h  bin_sem_bare.h  condition_var.h  mutex.h  recursive_mutex.h  sem-bare.h  sem.h
projects/libsel4sync/src/: recursive_mutex.c
projects/musllibc/src/locale/: c_locale.c
projects/musllibc/src/malloc/: lite_malloc.c  malloc.c
projects/picotcp-bsd/: pico_bsd_sockets.h  pico_osal_noos.c
projects/picotcp/include/: pico_stack.h
projects/picotcp/stack/: pico_stack.c
